--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "kiroAgent.configureMCP": "Disabled"
+    "kiroAgent.configureMCP": "Disabled",
+    "cSpell.words": [
+        "communitypass",
+        "mysqladmin",
+        "prootpassword",
+        "rootpassword",
+        "uroot"
+    ]
 }
