test: 데이터베이스 테스트 환경 구성 및 마이그레이션 테스트 추가 - +) prettier 세팅

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,10 @@
         "prootpassword",
         "rootpassword",
         "uroot"
-    ]
+    ],
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit"
+    }
 }
