--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
-    "test": "jest"
+    "test": "jest",
+    "db:migrate": "knex migrate:latest",
+    "db:rollback": "knex migrate:rollback",
+    "db:seed": "knex seed:run",
+    "db:reset": "knex migrate:rollback:all && knex migrate:latest && knex seed:run",
+    "db:status": "knex migrate:status"
   },
   "dependencies": {
     "@fastify/jwt": "^9.0.1",
     "ajv": "^8.12.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "knex": "^3.1.0",
