feat: 애플리케이션 아키텍처 구조화 및 설정 시스템 구현 - 중앙화된 설정 시스템 구현 (env, database, fastify) - 플러그인 기반 아키텍처 구현 (auth, database, error-handler) - 테스트 코드 및 문서화 추가 - 프로젝트 구조 개선 및 의존성 업데이트

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,16 @@
 {
-    "kiroAgent.configureMCP": "Disabled",
-    "cSpell.words": [
-        "communitypass",
-        "mysqladmin",
-        "prootpassword",
-        "rootpassword",
-        "uroot"
-    ],
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": "explicit"
-    }
+  "kiroAgent.configureMCP": "Disabled",
+  "cSpell.words": [
+    "communitypass",
+    "mysqladmin",
+    "prootpassword",
+    "rootpassword",
+    "testuser",
+    "uroot"
+  ],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  }
 }
