--- a/package.json
+++ b/package.json
@@ -8,21 +8,23 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
-    "test": "jest",
-    "db:migrate": "knex migrate:latest",
-    "db:rollback": "knex migrate:rollback",
-    "db:seed": "knex seed:run",
-    "db:reset": "knex migrate:rollback:all && knex migrate:latest && knex seed:run",
-    "db:status": "knex migrate:status"
+    "test": "NODE_ENV=test jest",
+    "db:migrate": "ts-node ./node_modules/.bin/knex migrate:latest",
+    "db:rollback": "ts-node ./node_modules/.bin/knex migrate:rollback",
+    "db:seed": "ts-node ./node_modules/.bin/knex seed:run",
+    "db:reset": "ts-node ./node_modules/.bin/knex migrate:rollback --all && ts-node ./node_modules/.bin/knex migrate:latest && ts-node ./node_modules/.bin/knex seed:run",
+    "db:status": "ts-node ./node_modules/.bin/knex migrate:status"
   },
   "dependencies": {
     "@fastify/jwt": "^9.0.1",
     "ajv": "^8.12.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.4.5",
-    "fastify": "^4.26.2",
+    "fastify": "^5.6.1",
+    "fastify-plugin": "^5.1.0",
     "knex": "^3.1.0",
-    "mysql2": "^3.10.3"
+    "mysql2": "^3.10.3",
+    "pino-pretty": "^13.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
